Fix ExpressionLoop tests and Lexer bug